# sweeping-monk

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: trinity.json
.github/workflows/: test.yml
examples/: watchd.clearance.example.toml
rules/: SWM-0000-REF-Document-Index.md  SWM-1100-SOP-PR-Watch-Poll-Cycle.md  SWM-1101-SOP-Codex-Resolution-Verification.md  SWM-1102-REF-Severity-Promotion-Rules.md  SWM-1103-SOP-Maintainer-Authorized-Writes.md  SWM-1104-CHG-Guarded-Writes-Automation.md  SWM-1105-CHG-Classifier-Blind-Spot-Visibility.md  SWM-1106-SOP-Rule-Addition-Cycle.md  SWM-1107-CHG-Watch-Quiet-Mode.md  SWM-1108-CHG-Watchdog-Daemon.md  SWM-1109-SOP-Codex-Re-Review-Trigger.md  SWM-1110-CHG-Codex-Re-Review-Trigger-Implementation.md  SWM-1111-CHG-OpenClaw-State-Change-Decision-Adapter.md  SWM-1112-CHG-Notify-On-Ready-Transition.md  SWM-1113-CHG-Clearance-Webhook-Auto-Approve.md
swm/: __init__.py  classify.py  cli.py  close_reason.py  dashboard.py  gh.py  github_app.py  guarded.py  investigator.py  judge.py  models.py  notify.py  poll.py  severity.py  state.py  webhook.py
tests/: conftest.py  test_classify.py  test_cli.py  test_dashboard.py  test_gh.py  test_github_app.py  test_guarded.py  test_investigator.py  test_judge.py  test_models.py  test_notify.py  test_poll.py  test_severity.py  test_state.py  test_webhook.py
tests/features/: watchdog.feature
tests/features/steps/: test_watchdog_steps.py
