[project]
name = "sweeping-monk"
version = "0.1.0"
description = "Local read-only PR review watchdog with Codex-bot integration."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Frank Xu", email = "franky.xhl@gmail.com"}]
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.6",
]

[project.scripts]
swm = "swm.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swm*"]
exclude = ["tests*", "rules*", "state*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=swm --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
bdd_features_base_dir = "tests/features"

[tool.coverage.run]
branch = true
source = ["swm"]
omit = ["swm/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
